--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "Fábio Santos <fabiosantosart@gmail.com>"
   ],
   "repository": "https://github.com/terser/terser",
+    "type": "module",
   "main": "dist/bundle.min.js",
   "module": "./main.js",
   "exports": {
